syntax = "proto3";

import "google/api/annotations.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

package user;

service UserService {
    rpc Login (LoginRequest) returns (LoginResponse) {
        option (google.api.http) = {
            post: "/v1/login"
            body: "*"
        };
    }

    rpc Register (RegisterRequest) returns (RegisterResponse) {
        option (google.api.http) = {
            post: "/v1/register"
            body: "*"
        };
    }
}

enum Role {
    UNKNOWN = 0;
}

enum Source {
    ORIGIN = 0;
} 

enum Gender {
    MALE = 0;
    FEMALE = 1;
    OTHER = 2;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    message Data {
        string userID = 1;
        string userName = 2;
        string dName = 3;
        string avatar = 4;
        Role role = 5;
        string token = 6;
    }
    Data data = 1;
    Error error = 2;
}

message RegisterRequest {
    string username = 1;
    string password = 2;
    string confirmPassword = 3;
    string dName = 4;
    string avatar = 5;
    string email = 6;
}

message RegisterResponse {
    message Data {
        bool success = 1;
    }
    Data data = 1;
    Error error = 2;
}

message UserData {
    string userID = 1 [(gogoproto.moretags) = "gorm:\"primary_key\""];
    string username = 2 [(gogoproto.moretags) = "gorm:\"unique_index\""];
    string password = 3;
    string dName = 4;
    string avatar = 5;
    string email = 6 [(gogoproto.moretags) = "gorm:\"unique;not null\""];
    int64 registeredTime = 7;
    Role role = 8;
    Source registerSource = 9;
    Gender gender = 10;
    bool locked = 11;
    int64 lockTime = 12;
    string lockReason = 13;
}

message Error {
    int32 code = 1;
    string message = 2;
    string detail = 3;
}